<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2020 Red Hat, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <parent>
      <groupId>org.goots.hiderdoclet</groupId>
      <artifactId>parent</artifactId>
      <version>1.0-SNAPSHOT</version>
   </parent>

   <artifactId>test</artifactId>

   <properties>
      <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
      <itPomIncludes>*</itPomIncludes>
   </properties>

   <dependencies>
      <dependency>
         <groupId>org.goots.hiderdoclet</groupId>
         <artifactId>doclet</artifactId>
      </dependency>
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
            <configuration>
               <skip>true</skip>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-install-plugin</artifactId>
            <configuration>
               <skip>true</skip>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
               <execution>
                  <id>attach-javadocs</id>
                  <configuration>
                     <source>11</source>
                     <doclet>org.goots.hiderdoclet.doclet.JavadocFilter</doclet>
                     <docletArtifact>
                        <groupId>org.goots.hiderdoclet</groupId>
                        <artifactId>doclet</artifactId>
                        <version>${project.version}</version>
                     </docletArtifact>
                     <additionalJOptions>
                        <!--<additionalJOption>-J-Dorg.goots.hiderdoclet.debug=true</additionalJOption>-->

                        <additionalJOption>--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=hiderdoclet
                        </additionalJOption>
                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.parser=hiderdoclet
                        </additionalJOption>
                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.tree=hiderdoclet
                        </additionalJOption>
                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.model=hiderdoclet
                        </additionalJOption>

                        <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED
                        </additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        </additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        </additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        </additionalJOption>
                     </additionalJOptions>
                     <detectJavaApiLink>true</detectJavaApiLink>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>

   <profiles>
      <profile>
         <id>run-its</id>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-invoker-plugin</artifactId>
                  <version>3.2.1</version>
                  <executions>
                     <execution>
                        <id>integration-test</id>
                        <goals>
                           <goal>install</goal>
                           <goal>run</goal>
                           <goal>verify</goal>
                        </goals>
                        <configuration>
                           <debug>true</debug>
                           <showErrors>true</showErrors>
                           <addTestClassPath>true</addTestClassPath>
                           <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
                           <localRepositoryPath>${localRepositoryPath}</localRepositoryPath>
                           <projectsDirectory>src/it</projectsDirectory>
                           <settingsFile>src/it/settings.xml</settingsFile>
                           <showVersion>true</showVersion>
                           <!-- <mavenExecutable>mvnDebug</mavenExecutable> -->
                           <filterProperties>
                              <localRepositoryPath>${localRepositoryPath}</localRepositoryPath>
                           </filterProperties>
                           <pomIncludes>
                              <pomInclude>${itPomIncludes}/pom.xml</pomInclude>
                           </pomIncludes>
                           <postBuildHookScript>verify</postBuildHookScript>
                        </configuration>
                     </execution>
                  </executions>
               </plugin>
            </plugins>
         </build>
      </profile>
   </profiles>
</project>
